feat(SCRUM-43): Backend endpoints, frontend tailwind setup and inital UI (#20)
